# review-iq

./: .dockerignore  .env.example  .gcloudignore  .gitignore  ARCHITECTURE.md  Dockerfile  PROMPTS.md  README.md  RECREATE_CHECKLIST.md  SECURITY.md  plan.md  pyproject.toml  review-iq-closeout-roadmap.md  spec.md
.github/workflows/: ci.yml  db-backup.yml  deploy.yml  eval.yml  uptime-alert.yml
app/: main.py
app/api/: account.py  admin.py  dashboard.py  demo.py  extract.py  google_auth.py  ops.py  query.py  shopify_auth.py
app/auth/: admin.py  api_key.py  keygen.py  session.py  signup.py
app/core/: auth.py  config.py  csv_ingest.py  language.py  llm.py  logging.py  metrics.py  prompt.py  rate_limit.py  router.py  routing_policy.py  sanitize.py  schemas.py  storage.py  storage_pg.py
app/templates/: dashboard.html
benchmark/: _cassette.py  runner.py
benchmark/cassettes/: labeler_cassettes.json  llm_judge_cassettes.json  review_iq_cassettes.json
benchmark/data/: _sample_bench_candidates.py  label_helper.py  leakage_check.py  llm_labeler.py  (+1 more)
docs/: compliance.md  data-ownership.md
eval/: README.md  generate_hindi_fixtures.py  label-helper-llm.py  label-helper.py  report.md  report.py  results.json  runner.py  slack_notify.py
ops/: artifact-registry-cleanup.json
site/: demo-data.json  index.html
supabase/: config.toml  push.py
tests/: conftest.py  test_eval_runner.py  test_failover.py  test_flywheel.py  test_providers.py  test_quota_degradation.py  test_reply_engine.py  test_reply_guardrails.py  test_router.py  test_routing_policy.py
web/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
(+248 files in other folders)
